@@ -123,7 +123,7 @@ typedef struct  ml_xterm_event_listener
 	int (*get_rgb)( void * , u_int8_t * , u_int8_t * ,
 			u_int8_t * , ml_color_t) ;		/* called in logical context. */
 	ml_char_t *  (*get_picture_data)( void * , char * , int * , int *) ; /* called in logical context. */
-	void (*show_picture)( void * , char * , int , int , int) ; /* called in visual context. */
+	void (*show_sixel)( void * , char *) ;		/* called in logical context. */
 	void (*add_frame_to_animation)( void * , char * , int * , int *) ; /* called in logical context. */
 	void (*hide_cursor)( void * , int) ;		/* called in logical context. */
 
